# BettyVoice

./: .gitignore  BETTY_VOICE_PLAN.md  README.md  pyproject.toml
docs/: vtol_reference.md
scenarios/: combat_warning.jsonl  engine_failure.jsonl  landing.jsonl  low_fuel.jsonl  startup.jsonl  takeoff.jsonl
src/betty_voice/: __init__.py  config.py  intent_router.py  llm_formatter.py  main.py  number_words.py  performance_solver.py  rule_engine.py  runtime.py  speech_input.py  state_store.py  telemetry_receiver.py  tts.py  ui.py  unit_conversions.py  vtol_knowledge.py  wake_phrase.py  wake_word.py  wake_word_training.py  wake_word_training_cli.py
src/betty_voice/data/: __init__.py  vtol_reference.json
tests/: test_intent_router.py  test_llm_formatter.py  test_number_words.py  test_performance_solver.py  test_phrase_normalization.py  test_rule_engine.py  test_runtime.py  test_scenario_jsonl.py  test_speech_runtime.py  test_state_store.py  test_telemetry_receiver.py  test_tts.py  test_ui.py  test_unit_conversions.py  test_vtol_knowledge.py  test_wake_phrase.py  test_wake_word.py  test_wake_word_training.py
tools/: build_wakeword_dataset.py  replay_packets.py  send_fake_packet.py
wakeword_training/betty/: livekit_balanced.yaml  livekit_smoke.yaml  livekit_wakeword.yaml  manifest.csv  phrases.json
wakeword_training/livekit_output/betty/: betty.onnx  betty.pt  betty_eval.json  betty_metrics.json  betty_smoke.onnx  betty_smoke.pt  betty_smoke_eval.json
