[project]
name = "betty-voice"
version = "0.2.0"
description = "External voice assistant for VTOL VR"
requires-python = ">=3.10"

[project.optional-dependencies]
voice = [
    "sounddevice>=0.4.6",
    "soundfile>=0.12.1",
    "faster-whisper>=1.0.0",
]
wakeword = [
    "openwakeword>=0.6.0",
    "sounddevice>=0.4.6",
    "numpy>=1.24.0",
]

[project.scripts]
betty-voice = "betty_voice.ui:main"
betty-voice-ui = "betty_voice.ui:main"
betty-voice-cli = "betty_voice.main:main"
betty-build-wakeword-dataset = "betty_voice.wake_word_training_cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
